--- a/client/src/pages/DoctorsPage.css
+++ b/client/src/pages/DoctorsPage.css
@@ -3,7 +3,9 @@ body {
 }
 
 #background {
-  display: inline-block;
+  display: flex; /* Change to flex */
+  flex-direction: column; /* Add this line */
+  align-items: center; /* Add this line */
   margin-top: 30px;
   background-color: #f2f2f2;
   border-radius: 10px;
@@ -11,17 +13,20 @@ body {
   padding: 20px;
   box-sizing: border-box;
   min-width: fit-content;
+  height: auto;
 }
 
 #userprofile {
+  display: flex; 
   text-align: center;
   margin-bottom: 20px;
-  
+  height: auto;
 }
 
 #myschedule {
   text-align: center;
   font-size: 12px;
+  margin-top: 20px; 
 }
 
 .main-body {
